Fix flick keyboard alignment using CSS Grid

--- a/public/style.css
+++ b/public/style.css
@@ -395,8 +395,8 @@ h2.section-title {
     width: 95%; 
      color: black;
     padding: 0px;
-    margin-top: -15px;
-    margin-bottom: -30px;
+    margin-top: -30px;
+    margin-bottom: -15px;
     border: 2px solid #ccc;
     border-radius: 6px;
     background: #f9f9f9;
